@@ -39,6 +39,7 @@ GTK_REQ=2.6.0
 GNOME_REQ=2.0.0
 GNOMEUI_REQ=2.0.0
 GNOMEVFS_REQ=2.0.0
+PYTHON_REQ=2.4
 LIBEXIF_REQ=0.6.12
 LIBIPTCDATA_REQ=0.2.1
 ID3LIB_REQ=3.8.3
@@ -47,6 +48,7 @@ AC_SUBST(GLIB_REQ)
 AC_SUBST(GTK_REQ)
 AC_SUBST(GNOMEUI_REQ)
 AC_SUBST(GNOMEVFS_REQ)
+AC_SUBST(PYTHON_REQ)
 AC_SUBST(LIBEXIF_REQ)
 AC_SUBST(LIBIPTCDATA_REQ)
 AC_SUBST(ID3LIB_REQ)
@@ -249,7 +251,7 @@ AC_ARG_ENABLE([python],
 AC_MSG_RESULT([$enable_python])
 
 if test "x$have_python" != "xno"; then
-    AM_PATH_PYTHON([2.3],[],[no])
+    AM_PATH_PYTHON([$PYTHON_REQ],[],[no])
     if test "x$PYTHON" = "x:"; then
         have_python=no
     fi
